2006-10-16  Brian Bidulock  <bidulock@openss7.org>

	* AUTHORS: updates for release
	* LICENSE: deleted unused file
	* NEWS: updates for release
	* README: updates for release
	* THANKS: updates for release
	* doc/man/man3/xti_sctp.3.man: completed manual page
	* doc/man/man7/npi_sctp.7.man: completed manual page
	* doc/man/man7/tpi_sctp.7.man: completed manual page
	* doc/manual/bugs.texi: updates for release
	* doc/manual/todo.texi: updates for release
	* src/drivers/sctp2.c: corrections for test case passes
	* src/include/sys/npi_sctp.h: corrections for test case passes
	* src/test/test-sctp_n.c: corrected several test cases
	* src/test/test-sctp_n2.c: corrected several test cases
	* src/test/test-sctp_t.c: corrected several test cases
	* src/util/init/strsctp: do not preload modules
	* src/util/init/strsctp.sh: do not preload modules
	* src/util/sysconfig/strsctp: do not preload modules
	* tests/testsuite-sctp_n.at: skip unworkable tests

2006-10-14  Brian Bidulock  <bidulock@openss7.org>

	* doc/man/Makefile.am: added package manual page
	* doc/man/man4/sctp.4.man: updated for release
	* doc/man/man4/sctp_ioctl.4.man: removed unused manpage
	* doc/man/man4/sdl_sctp.4.man: removed unused manpage
	* doc/man/man4/strsctp_soon.4.man: removed unused manpage
	* doc/man/man5/strsctp.5.man: added package manpage
	* doc/man/man7/strsctp_soon.7.man: removed unused manpage
	* doc/man/man8/sctp.8.man: removed unused manpage
	* doc/man/man8/test-xxx.8.man: removed unused manpage

2006-10-12  Brian Bidulock  <bidulock@openss7.org>

	* acinclude.m4: removed redundant debug flags

2006-10-10  Brian Bidulock  <bidulock@openss7.org>

	* AUTHORS: updates for release
	* NEWS: updates for release
	* README: updates for release
	* THANKS: updates for release
	* doc/man/Makefile.am: updates for release
	* doc/man/strsctp.refs: updates for release
	* doc/man/man3/xti_sctp.3.man: updates for release
	* doc/man/man4/tpiperf.4.man: updates for release